<resources>
    <string name="app_name">Events Organizer</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="start_day">Start day</string>
    <string name="end_day">End day</string>
    <string name="delete_event">Delete event</string>
    <string name="delete_event_message">Sei sicuro di voler eliminare questo evento?</string>
    <string name="delete_user_message">Sei sicuro di voler eliminare questo utente?</string>
    <string name="edit_event_message">Sei sicuro di voler modificare questo evento?</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="friend_id">Friend ID</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
</resources>